package br.com.academico.evento;

public interface IEvento {

    public void inscrever();
}